Add dash activities. Able to create payment.
Still need to book activity properly

--- a/GoLocal/src/pages/activity/activity.scss
+++ b/GoLocal/src/pages/activity/activity.scss
@@ -115,6 +115,7 @@ page-activity {
 
     & .guide-sidebar {
 
+        margin: 40px 0px;
         padding: 20px;
         border: 0px solid black;
 
